log
Fri Mar 18 14:24:14 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:35: error: expected expression before ‘,’ token
     List *lista = (List *) calloc(,sizeof(List));
                                   ^
Compilation failed
d5c322c
Fri Mar 18 14:24:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6157cbe
Fri Mar 18 14:31:36 UTC 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|5
total_score: 15/70
6681473
Fri Mar 18 14:49:31 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
e86c120
